tests/e2e/snapshots/e2e__e2e_tests__machine_contract__machine_contract_backlinks.snap
---
source: tests/e2e/machine_contract.rs
assertion_line: 181
expression: normalize_for_snapshot(output)
---
{
  "command": "query.backlinks",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "note": "Home"
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
