tests/e2e/snapshots/e2e__e2e_tests__machine_contract__machine_contract_bloat.snap
---
source: tests/e2e/machine_contract.rs
assertion_line: 293
expression: normalize_for_snapshot(output)
---
{
  "command": "analyze.bloat",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "limit": 10,
    "threshold": 50000
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
