tests/e2e/snapshots/e2e__e2e_tests__machine_contract__machine_contract_broken_links.snap
---
source: tests/e2e/machine_contract.rs
assertion_line: 356
expression: normalize_for_snapshot(output)
---
{
  "command": "diagnose.broken-links",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {},
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
