tests/e2e/snapshots/e2e__e2e_tests__machine_contract__machine_contract_index.snap
---
source: tests/e2e/machine_contract.rs
assertion_line: 133
expression: normalized
---
{
  "command": "index.index",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "dry_run": false,
    "force": true,
    "verbose": false
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
