tests/e2e/snapshots/e2e__e2e_tests__machine_contract__machine_contract_init.snap
---
source: tests/e2e/machine_contract.rs
assertion_line: 112
expression: normalized
---
{
  "command": "init.init",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "force": true
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
