tests/e2e/snapshots/e2e__e2e_tests__machine_contract__machine_contract_stats.snap
---
source: tests/e2e/machine_contract.rs
assertion_line: 386
expression: normalize_for_snapshot(output)
---
{
  "command": "view.stats",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {},
  "result": {
    "chunks": 0,
    "links": 0,
    "notes": 0,
    "tags": 0,
    "unresolved_links": 0
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
